# torrent-mate

./: .env-example  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .rgignore  .venv_ready  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  DESIGN_REPORT.md  DESIGN_VISION.md  IMPLEMENTATION.md  INSTALLATION.md  MANUAL.md  MIGRATION.md  Makefile  README.md  ROADMAP.md  codecov.yml  com.personalscraper.pipeline.plist  com.personalscraper.pipeline.plist.template  config.example.json5  ecosystem.config.js  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  gitleaks-full.yml  nightly.yml  pr.yml
099-SCRIPTS/: EpisodesTVDBNamer.py  PackUnpack copie.py  PackUnpack.py  SensCritique.py  SensCritiqueScrapper.py  TVDBNameToNum copie 2.py  TVDBNameToNum copie.py  TVDBNameToNum.py  Unpack.py  folderyearrenamer  tvdbapiconfig  videoCutter.py  videoMerger.py
099-SCRIPTS/plex/: cleanFileSystem.py  decorators.py  fileSystem.py  senscritique.py  trailerScraper.py  tvShowsThemesScraper.py  videoCutter.py  videoMerger.py  youtubeScraper.py
config/: config.json5  indexer.json5  tracker.json5  watch_seed.json5  web.json5
config.example/: acquire.json5  categories.json5  config.json5  disks.json5  encoding.json5  indexer.json5  metadata.json5  notify.json5  paths.json5  patterns.json5  providers.json5  ranking.json5  scraper.json5  thresholds.json5  torrent.json5  tracker.json5  trailers.json5  watch_seed.json5
docs/: FFPROBE-REFERENCE.md  IMPLEMENTATION.md  TMDB-API.md  TVDB-API.md  columns.md  configuration.md  ffprobe-reference.md  guessit-evaluation.md  how-it-works.md  install.md  kanbanmateui.md  lanes.md  qbittorrent-api-reference.md
docs/analysis/: 01-library-indexer-consolidation.md  02-registry-merge-analysis.md  03-god-modules-debt-audit.md  04-filesystem-decoupling-macfuse-ntfs.md  05-architecture-improvement-roadmap.md  2026-07-08-RESUME-webui-review.md  2026-07-08-env-sep-cutover.md  2026-07-08-s4-config-editor-session-report.md  2026-07-08-webui-s1-s4-audit.md  2026-07-16-constitution-v2-session-report.md  2026-07-16-e7-screen-rule-sweep.md
docs/pipeline-runs/: 2026-04-23-12h13-pipeline-run.md  2026-04-23-14h45-pipeline-run.md  2026-05-07-22h51-pipeline-run.md  2026-05-11-16h11-pipeline-run.md  2026-05-21-17h16-pipeline-run.md  2026-05-25-09h57-pipeline-run.md  2026-05-25-23h49-pipeline-run.md  2026-05-28-12h07-pipeline-run.md  2026-05-28-17h50-pipeline-run.md  2026-06-03-17h36-pipeline-run.md
docs/reference/: architecture.md  bosun-control.md  c411-api.md  commands.md  config-overlay-layout.md  deployment.md  event-bus.md  external-ids-flow.md  feature-lifecycle.md  ffprobe-api.md  grab-core.md  healthchecks-api.md  indexer-json-shapes.md  indexer.md  insights.md  lacale-api.md  libraries.md  logging.md  maintenance.md  naming.md  omdb-api.md  pipeline-internals.md  product-intent.md  promises.md  qbittorrent-api.md  repo-safety.md  runbook-post-merge.md  scraping.md  storage.md  telegram-api.md  testing.md  tmdb-api.md  torr9-api.md  trailers.md  trakt-api.md  transmission-api.md  tvdb-api.md  web-ui.md
docs/v0-project-setup/: BRAINSTORMING.md  DESIGN.md
docs/v1-ingest/: BRAINSTORMING.md  DESIGN.md
docs/v13-pipeline-correctness/: BACKLOG-V14.md  DESIGN.md
docs/v15-config-driven/: BRAINSTORMING.md  DESIGN.md
docs/v2-sort-clean/: BRAINSTORMING.md  DESIGN.md
docs/v3-scrape/: BRAINSTORMING.md  DESIGN.md
docs/v4-dispatch/: BRAINSTORMING.md  DESIGN.md
docs/v4-verify/: DESIGN.md
docs/v5-dispatch/: BRAINSTORMING.md  DESIGN.md
frontend/: .gitignore  .npmrc  eslint.config.js  index.html  openapi.json  oxlintrc.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
hooks/: install.sh  pre-commit  reference-transaction
launchd-plists/: README.md  com.personalscraper.backfill-ids.plist
personalscraper/: __init__.py  __main__.py  _fs_utils.py  cli.py  cli_app.py  cli_helpers.py  cli_state.py  cli_telemetry.py  config.py  genre_mapper.py  io_utils.py  lock.py  logger.py  models.py  naming_patterns.py  nfo_utils.py  notifier.py  pause.py  pipeline.py  pipeline_events.py  pipeline_history.py  pipeline_observer.py  pipeline_protocol.py  pipeline_steps.py  run_journal.py  text_utils.py
scripts/: _codename_overrides.py  agent-stage-deploy.sh  audit-cli-coverage.py  audit-dead-infrastructure.py  audit-fk-orphans.py  audit_design_coverage.py  autodeploy-poll.sh  bootstrap-pm2.sh  check-acquisition-coherence.py  check-media-complete.py  check-module-size.py  check-no-broad-registry-catch.py  check-pragma-discipline.py  check-typed-api.py  check_env_keys.py  check_logging.py  check_version_bump.py  cleanup-2026-05-21-orphan-shows.py  cli-coverage-report.py  coverage_audit_report.sh  deploy-staging.sh  deploy.sh  drift-detect.py  export-openapi.py  generate_classifier_golden.py  get_coverage_threshold.py  install-git-guards.sh  install-launchd.sh  phase-gate.sh  plan-a-audit.sh  pre-push  uninstall-launchd.sh  update_feature_map.py  verify-deploy.sh
tests/: __init__.py  _legacy_ids.py  conftest.py  test_bootstrap_script.py  test_check_scripts.py  test_cli.py  test_cli_lifecycle_events.py  test_cli_telemetry.py  test_config.py  test_deploy_scripts.py  test_dotenv_bootstrap.py  test_env_example_completeness.py  test_event_names.py  test_io_utils.py  test_killswitch.py  test_layering.py  test_lock.py  test_lock_scoped_scrape.py  test_log_redaction.py  test_logger.py  test_logger_cli.py  test_models.py  test_naming_patterns.py  test_nfo_utils.py  test_notifier.py  test_output_emit.py  test_perms.py  test_pipeline.py  test_pipeline_app_context.py  test_pipeline_integration.py  test_pipeline_orchestration.py  test_pipeline_protocol.py  test_pipeline_smoke_subprocess.py  test_pipeline_step_wrappers.py  test_plugin_manifest.py  test_reference_transaction_hook.py  test_resilience_helpers.py  test_smoke.py  test_step_report_details_payload_roundtrip.py  test_step_report_failed_items_coercion.py  (+3 more)
web/: index.html  package-lock.json  package.json  vite.config.js
(+2989 files in other folders)
