[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalscraper"
dynamic = ["version"]
description = "Media pipeline automation — ingest, sort, scrape, verify, dispatch."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "LounisBou", email = "LounisBou@users.noreply.github.com"}
]
keywords = ["media", "plex", "kodi", "nfo", "scraper", "automation", "pipeline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "qbittorrent-api>=2025.1.0",
    "transmission-rpc>=7.0.0",
    "guessit>=3.8.0",
    "rapidfuzz>=3.14.0",
    "tenacity>=9.1.0",
    "rich>=14.0.0",
    "structlog>=25.0.0",
    "json5>=0.9.14",
    "xmltodict>=0.13.0",
    "yt-dlp>=2026.1.1,<2027",
    "pymediainfo>=6.1.0",
    "enzyme>=0.5.2",
    "xxhash>=3.4.0",
    "filelock>=3.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "pip-audit>=2.7.0",
    "pip-licenses>=4.0.0",
    "sqlite-utils>=3.36",
    "pyfakefs>=5.4.0",
    "hypothesis>=6.100.0",
    "pytest-xdist>=3.8.0",
    "responses>=0.25.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
personalscraper = "personalscraper.cli:app"

[tool.setuptools.dynamic]
version = {attr = "personalscraper.__version__"}

[tool.setuptools.packages.find]
include = ["personalscraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
markers = [
    "e2e: End-to-end tests requiring storage disks and/or live APIs",
    "roundtrip: Roundtrip tests — torrentify disk media, re-match via API, compare",
    "e2e_torrent: Pipeline E2E with real torrent downloads (manual only, costs ratio)",
    "e2e_idempotence: E2E idempotence tests on real staging data (manual only)",
    "network: Network tests — opt-in via TRAILER_INTEGRATION_TESTS=1 env var",
    "slow: slow tests (perf regression), off by default — run with -m slow",
    "darwin_only: macOS-only smoke tests (skipped on Linux/Windows CI runners)",
    "multifs: filesystem-capability tests using faked mount/stat fixtures (no real disks required)",
    "integration: cross-module characterization / integration tests (not unit; may build a temp library FS)",
]
addopts = "-m 'not e2e and not e2e_torrent and not e2e_idempotence and not slow and not network'"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D"]
ignore = ["D100", "D104"]  # D100=module docstring (enforced manually), D104=__init__ docstring

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["personalscraper"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["enzyme.*", "guessit.*", "qbittorrent_api.*", "rapidfuzz.*", "yt_dlp.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["personalscraper", "tests", "scripts"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    ".data",
    ".personalscraper",
]
# Pyright resolves imports against pythonPath / venv. Without extraPaths,
# the LSP (which often runs from a venv that does not have personalscraper
# installed editable) cannot find ``personalscraper.*`` and emits hundreds of
# "could not be resolved" warnings. Anchoring at the repo root makes the
# package importable regardless of the active interpreter.
extraPaths = ["."]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = "none"

[tool.coverage.run]
source = ["personalscraper"]
omit = [
    "personalscraper/__main__.py",
]
branch = true
parallel = true
concurrency = ["multiprocessing"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]
