[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kanbanmate"
version = "0.19.1"
description = "Reusable Kanban orchestrator on GitHub Projects v2 with autonomous Claude Code agents."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "LounisBou" }]
dependencies = [
    "typer>=0.12",
    "PyYAML>=6",
    "attrs>=23",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-PyYAML",
    # httpx backs FastAPI's TestClient (starlette.testclient imports it at module
    # load); required so the tests/http suite runs for real under the [ui] extra.
    "httpx>=0.27",
]
ui = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
mcp = [
    "mcp>=1.26",
]

[project.scripts]
kanban = "kanbanmate.cli.app:main"
kanban-comment = "kanbanmate.bin.kanban_comment:main"
kanban-done = "kanbanmate.bin.kanban_done:main"
kanban-heartbeat = "kanbanmate.bin.kanban_heartbeat:main"
kanban-move = "kanbanmate.bin.kanban_move:main"
kanban-progress = "kanbanmate.bin.kanban_progress:main"
kanban-route = "kanbanmate.bin.kanban_route:main"
kanban-session-end = "kanbanmate.bin.kanban_session_end:main"
kanban-update-body = "kanbanmate.bin.kanban_update_body:main"
kanban-update-main = "kanbanmate.bin.kanban_update_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kanbanmate = ["py.typed", "assets/*.tmpl", "assets/*.yml", "bin/check-*.sh", "webui/**/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
markers = [
    "local_real: tests that exercise real local tooling (tmux, git worktrees); skipped by default in CI.",
    "integration: end-to-end tests against external services; skipped in the default unit run.",
]
